2007-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: change line to xstring; drop line_len;
	  improve <NUL> handling; require <CR><NL> to end line.

2007-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h, Makefile.am, xmalloc.h: split off xstring.
	* FileAccess.cc, FileAccess.h, Fish.cc, Fish.h, Http.cc, Http.h,
	  LocalAccess.cc, NetAccess.cc, NetAccess.h, SFtp.cc, ftpclass.cc,
	  ftpclass.h: use xstring.

2007-03-09  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.h: don't delete the object in ListDel.

2007-03-06  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: tell target to find file size before requesting
	  source to get file information - this avoids HEAD when doing
	  `get -c' to local destination.
	* Http.cc, Http.h: try to log error text if it is already available.
	* HttpDir.cc, misc.cc, misc.h: move remove_tags to misc.
	* buffer.cc, buffer.h: (ZeroTerminate) new method.
	* xmalloc.h: (xstring) new class.

2007-02-27  Damon Harper <gnu@usrbin.ca>

	* MirrorJob.cc, MirrorJob.h: new option --only-existing.

2007-02-27  Alexander V. Lukyanov <lav@yars.free.net>

        * CmdExec.cc, FileAccess.cc, FileCopy.cc, Filter.cc,
	  FindJob.cc, Fish.cc, GetFileInfo.cc, GetPass.cc, Http.cc,
	  LocalAccess.cc, MirrorJob.cc, NetAccess.cc, OutputJob.cc,
	  PtyShell.cc, QueueFeeder.cc, ResMgr.cc, SFtp.cc, StringSet.cc,
	  alias.cc, buffer.cc, commands.cc, lftp.cc, misc.cc: use xstrset
	  to assign dynamic strings.
	* commands.cc: -p option has priority over the url.

2007-01-11  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: use default closure feature of ResClient;
	  clear ls cache when ftp:list-options changes.
	* xmalloc.cc, xmalloc.h: (xstrset) new function.
	* ftpclass.cc: use xstrset.

2007-01-06  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc, misc.h, Fish.cc, Fish.h: move shell_encode to misc.cc.
	* MirrorJob.cc: use shell_encode to quote properly file names for shell;