@@ -1,3 +1,8 @@
+2007-03-23  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* Fish.cc, Fish.h: use StringSet for path_queue.
+	* StringSet.cc, StringSet.h: (LastString, Pop) new methods.
+
 2007-03-13  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* ftpclass.cc, ftpclass.h: change line to xstring; drop line_len;
